5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1822_1639.log
== TEST (2019-06-13 10:07:45) 
-- CODE:
from numpy import *
v = array(eval(input("v: "))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % == 0):
		vpar[a] = v[a]
	a = a + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 3
    vpar = zeros(size(v), dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:08:21) 
-- CODE:
from numpy import *
v = array(eval(input("v: "))
par = zeros(size(v), dtype=int)
par = 0
a = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % == 0):
		vpar[a] = v[a]
	a = a + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 3
    par = zeros(size(v), dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:53) 
-- CODE:
from numpy import *
v = array(eval(input("v: "))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 3
    vpar = zeros(size(v), dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:51) 
-- CODE:
from numpy import *
v = array(eval(input("v: "))
r = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 3
    r = zeros(size(v), dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:00) 
-- CODE:
from numpy import *
v = array(eval(input("v: "))
vet = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 3
    vet = zeros(size(v), dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:29) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 11
    if (v[i] % == 0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:29) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 11
    if (v[i] % == 0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:44) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = b
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[b] = a
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:53) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:48) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
vpar = zeros(size(v), dtype=int)
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar - size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:32) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
vpar = zeros(size(par), dtype=int)
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
vpar = zeros(par, dtype=int)
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:15) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
vpar = zeros(par, dtype=int)
a = 0
b = 0
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:39) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
vpar = zeros(size(v), dtype=int)
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:25) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(v)):
	if (v[i] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:21) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = v[b]
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:32) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		a = a + 1
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:01) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		b = b + 1
	a = a + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:54) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:10) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = v[z]
		a = a + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:42:31) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1
print(par)
print(vpar)
-- EXECUTION TIME:
1.10577
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
6
[0 1 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 1 4 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
6
[0 1 4 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:59) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = z - 1
		a = a + 1 
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:17) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		a = a + 1 
b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:28) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		a = a + 1 
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:29) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		a = a + 1 
	   b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 15
    b = b + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:29) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		a = a + 1 
	   b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 15
    b = b + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:30) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		a = a + 1 
	   b = b + 1
print(par)
print(vpar)
-- ERROR:
File "XXXX", line 15
    b = b + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
b = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = b
		a = a + 1 
	b = b + 1
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:17) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(vpar)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1 
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:05) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(v)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1 
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(v)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1 
print(par)
print(vpar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:47:22) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(v)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1 
print(par)
print(vpar)
-- EXECUTION TIME:
1.20569
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
v: 6
[ 0  1  6  8 11 12]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
v: 5
[0 1 4 7 8]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
v: 6
[0 1 4 6 7 8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:47:36) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
par = 0
a = 0
for i in range(size(v)):
	if (v[i] % 2 == 0):
		par = par + 1

vpar = zeros(par, dtype=int)
for z in range(size(v)):
	if (v[z] % 2 == 0):
		vpar[a] = z
		a = a + 1 
print(par)
print(vpar)
-- EXECUTION TIME:
0.942054
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
6
[ 0  1  6  8 11 12]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 1 4 7 8]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
6
[0 1 4 6 7 8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
